# SST_transcript

./: .dockerignore  .gitignore  Dockerfile  README.md  client_example.py  docker-compose.yml  pyproject.toml  start.command  start.sh
docs/: PLAN_auth_and_network.md
src/sst/: __init__.py  __main__.py  _dl_worker.py  audio.py  auth.py  config.py  device.py  formats.py  jobs.py  manager.py  openai_compat.py  pipeline.py  registry.py  server.py  vad.py
src/sst/diarize/: base.py  fallback.py  pyannote_engine.py
src/sst/static/: app.js  index.html  login.html  style.css
src/sst/stt/: base.py  sensevoice.py  whisper_hf.py
