[project]
name = "sst-service"
version = "1.0.0"
description = "Local offline speech-to-text with speaker diarization (Cantonese/English/Mandarin/code-switching)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "huggingface_hub>=0.26",
    "torch>=2.4",
    "torchaudio>=2.4",
    "transformers>=4.48,<5",
    "accelerate>=1.0",
    "pyannote.audio>=3.3.2",
    "speechbrain>=1.0",
    "silero-vad>=5.1",
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "soundfile>=0.12",
    "requests>=2.31",
    "python-docx>=1.1",
]

[project.optional-dependencies]
sensevoice = [
    "funasr>=1.1.14",
]

[project.scripts]
sst-server = "sst.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sst"]
